WIP: Refactoring OAuth2Resource Interceptor